production-eks-blueprint/kubernetes/environments/dev/patch-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: cafe-lumiere
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: cafe-lumiere
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cafe-lumiere
spec:
  replicas: 2
